Autocomplete development started

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -16,6 +16,11 @@
 		<input type="submit" value="submit" />
 		<div class="cl"></div>
 	</form>
+	<form method="post" class="dev-create" action="/api/dev/products/getByName">
+		<label>Create findProduct/byName view</label>
+		<input type="submit" value="submit" />
+		<div class="cl"></div>
+	</form>
 	<form method="post" class="dev-create" action="/api/dev/accounts/db">
 		<label>Create accounts database</label>
 		<input type="submit" value="submit" />
