autocomplete is hooked up

--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -1,6 +1,7 @@
 <% layout('layout') %>
 <% stylesheet('/css/styles.css') %>
 <% stylesheet('/css/jquery.ui.css') %>
+<% stylesheet('/css/jquery.autocomplete.css') %>
 <% script('/scripts/jquery-1.8.2.min.js') %>
 <% script('/scripts/jquery.validate.min.js') %>
 <% script('/scripts/jquery.autocomplete.js') %>
