--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <div class="profile-menu-blocks">
 	<a href="/products/list">Products</a>
-	<a href="/dishes/list">My Dishes</a>	
+	<a href="/index.html">My Dishes</a>	
 </div>
 
 <% block('header', '') %>
