--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,5 +1,5 @@
 <a href="/">Home</a>
 <a href="/products/list">My Products</a>
-<a href="/dishes/list">My Dishes</a>
+<a href="/index.html">My Dishes</a>
 <a href="/dev">Development</a>
 <a href="/logout">Logout</a>
