--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -212,13 +212,14 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 	width: 170px;
 }
 
-.dev-views {
+#dev-views {
+	display: none;
 	width: 550px;
 	margin: 0;
 	padding: 0;
 }
 
-.dev-views label {
+#dev-views label {
 	width:300px;
 	display: block;
 	float: left;
@@ -228,7 +229,7 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 	text-align: left;
 }
 
-.dev-views input {
+#dev-views input {
 	width: 200px;
 	display: block;
 	float: right;
@@ -236,7 +237,7 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 	padding: 0;
 	cursor: pointer;
 }
-.dev-views .cl {
+#dev-views .cl {
 	clear:both;
 	border: 1px solid #333;
 }
