--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
 					<input type="text" name="login" id="login" />
 					<label for="pass">Password:</label>
 					<input type="password" name="pass" id="pass" />
-					<input type="submit" value="login" />
+					<input type="submit" value="login" id="login-button" />
 					<a class="register" href="/register">Register</a>
 					<div class="clear"></div>
 				</form>
